@@ -14,6 +14,9 @@ Changes
 Fixes
 -----
 
+ - Refresh Cluster Info after query execution in the console, 
+   to ensure that the cluster info is always up to date. 
+
 2017/11/13 1.7.3
 ================
 
